# solus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ctr.tests/: dj.csm  fread.ctr  join.csm  syntax.ctr
include/ctr/: bytecode.h  error.def  std.h  syntax.h  vm.h
include/sol/: bytecode.h  error.def  solc.h  syntax.h  vm.h
sol.tests/: asm.sol  import.sol  my_mod.sol  window.sol
sol.tests/shaders/: default.frag  default.vert
src/: bytecode.c  cli.c  ctrc.c  dbg.c  solc.c  std.c  syntax.c  vm.c
tests/: dj.c  scan.c
